--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,40 +1,51 @@
 $primaryColor: rgb(61, 56, 59);
 
 $primaryColorBtn: rgb(77, 77, 77);
+
 $secondaryColorBtn: rgb(47, 23, 23);
+
 $headerColor: rgb(255, 255, 255);
-$textColor: rgb(255, 218, 218);
+
 
 $smallFontFam: font-family ("Merienda", "Impact", "Georgia");
+
 $smallFontWeight: font-weight (555);
 
 $rpsButtons: width 20px;
 
+$boxBorderWidth: width 22px; 
+$boxBorderColor: border-color white;
+$boxBackgroundColor: background-color rgba(0, 0, 0, 0.0);
 
+$smallFontSize: font-size 24px;
+
+$smallTextColor: rgb(255, 218, 218);
+
+* {
+    box-sizing: border-box;
+}
 .mainDiv{
     background-image: url("../../../generalImages/image1.jpg");
+    background-color: black;
     padding: 5em 10em;
     }
+
+.headerDiv {
+    border-width: $boxBorderWidth;
+    border-color: $boxBorderColor;
+    width: 50%;
+    color: $headerColor;
+}
 
 body{
     
     background-color: $primaryColor;
     margin:0;
     //opacity: 0.5;
-    
-    
-    
-    
-    p{
-        color: $textColor;
-        font-family: $smallFontFam;
-        font-size: 24px;        
-        font-weight: $smallFontWeight;
 
-    }
     #humanSelection{
         font-family: $smallFontFam;
-        font-size: 22px;
+        font-size: 30px;
         color:azure
     }
     #pDiv{
@@ -49,40 +60,54 @@ body{
    
 }
 
-header{
-    color: $headerColor
-}
-
 .buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    
-        div{
+
+    .rpsBtn{     
+        background-color: $boxBackgroundColor;
         padding: 0, 10%;
-        margin: 0, auto; 
+        margin: 0, auto;
+        color: black;
+
         }
+        
         #rock{
-        background-color: $primaryColorBtn;
-        color: white;
+        border-width: 10px;
+        border-color: black;
+        border-style:outset;
         width: 300px;    
         height: 200px;
         font-family: 'Merienda', 'Impact', 'Georgia';
-        font-size: 30px;
+        font-size: 30px;        
+        display: flex;
+        flex-direction: column;
+            #rock p{
+                justify-content: start;
+                align-items: center;
+            }
+            #rockImg{
+                margin: auto;
+                width: 30%;
+                justify-content:center;
+                align-items: center;
+            }
         }
         #paper{
             @extend #rock;
         }
+            #paperImg{
+
+            }
         #scissor{
             @extend #rock;
         }
+            #scissorImg{
+                
+            }
 }
-
-//#resultDiv{
-//   display: flex;
-
-//}
 
 #button{
     background-color: $secondaryColorBtn;
