--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,11 +24,33 @@ $smallTextColor: rgb(255, 218, 218);
 * {
     box-sizing: border-box;
 }
+
+.mainDiv:after{
+    content: "";
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(81, 81, 81, 0.164);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
 .mainDiv{
     background-image: url("../../../generalImages/image1.jpg");
     background-color: black;
     padding: 5em 10em;
+    background-position:center;
+    position: relative;
     }
+
+.mainDiv > * {
+    z-index: 10;
+    position: relative;
+}
+
+
 
 .headerDiv {
     border-width: $boxBorderWidth;
@@ -38,10 +60,7 @@ $smallTextColor: rgb(255, 218, 218);
 }
 
 body{
-    
-    background-color: $primaryColor;
     margin:0;
-    //opacity: 0.5;
 
     #humanSelection{
         font-family: $smallFontFam;
@@ -65,49 +84,70 @@ body{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
-    .rpsBtn{     
-        background-color: $boxBackgroundColor;
-        padding: 0, 10%;
-        margin: 0, auto;
-        color: black;
-
-        }
+    outline: none;
+ //   
+}
         
         #rock{
+        background-color: transparent;
+        
+        width: 400px;    
+        height: 350px;
         border-width: 10px;
         border-color: black;
         border-style:outset;
-        width: 300px;    
-        height: 200px;
-        font-family: 'Merienda', 'Impact', 'Georgia';
-        font-size: 30px;        
+             
         display: flex;
         flex-direction: column;
-            #rock p{
-                justify-content: start;
-                align-items: center;
-            }
-            #rockImg{
-                margin: auto;
-                width: 30%;
-                justify-content:center;
-                align-items: center;
-            }
+        justify-content: start;
+        align-items: center;
+        box-shadow: 10px 14px 14px  rgba(0, 0, 0, 0.6);
         }
+
+        #rock p {
+            border: 5px solid black;
+            background-color: rgba(0, 0, 0, 0.472);
+            padding: 0;
+            margin: 0, auto;
+            color: antiquewhite;
+            font-family: 'Merienda', 'Impact', 'Georgia';
+            font-size: 45px;  
+            font-weight: bolder; 
+        }
+
+        /*.buttonPBorder {
+            background-color: ;
+            margin-top: 7%;
+            height:auto;
+            width: auto;
+            //outline: 5px;
+            border-color: pink;
+        }*/
+
+        #rockImg{
+            margin: auto;
+            width: 40%;
+            justify-content:center;
+            align-items: center;
+        }
+        
         #paper{
             @extend #rock;
         }
-            #paperImg{
-
-            }
+        #paperImg{
+            @extend #rockImg;
+            height: auto;
+        }
+        
         #scissor{
             @extend #rock;
         }
-            #scissorImg{
-                
-            }
-}
+        #scissorImg{
+            @extend #paperImg;
+            height: 80%;
+            width: 50%; 
+        }
+
 
 #button{
     background-color: $secondaryColorBtn;
