--- a/scss/main.css
+++ b/scss/main.css
@@ -7,6 +7,26 @@ body {
   margin: 0;
 }
 
+#contactBar {
+  list-style: none;
+  width: 100%;
+  height: 60px;
+  position: absolute;
+  text-align: right;
+  padding-top: 7px;
+}
+
+#contactBar li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+#contactBar #liP {
+  position: relative;
+  top: -1rem;
+  font-family: font-family "Merienda", "Impact", "Georgia";
+}
+
 .mainDiv:after {
   content: "";
   display: block;
@@ -47,7 +67,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-top: 0em;
+  padding-top: 3em;
   color: #4c4843;
 }
 
@@ -89,11 +109,15 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-size: 50px;
-  color: #4c4843;
+  color: antiquewhite;
+}
+
+.cumulScoreBox h4 {
+  color: antiquewhite;
 }
 
 #cumulScoreHum, #cumulScoreCPU {
-  color: #4c4843;
+  text-shadow: 2px 2px rebeccapurple;
 }
 
 .buttonsDiv {
@@ -189,6 +213,7 @@ body {
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2rem;
   position: absolute;
   top: 28%;
   left: 0;
@@ -196,7 +221,7 @@ body {
 }
 
 #resultDivBox #round-result {
-  text-shadow: 2em 2em 2em 2em black;
+  text-shadow: 2px 2px rebeccapurple;
 }
 
 #textAndButtons {
@@ -247,17 +272,20 @@ body {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 2rem;
+  margin-top: 2rem;
   font-family: font-family "Merienda", "Impact", "Georgia";
-  color: azure;
+  color: antiquewhite;
 }
 
 #textAndButtons #yrSel, #textAndButtons #pDiv {
   font-size: 25px;
+  color: #4c4843;
+  font-weight: 600;
 }
 
 #textAndButtons #humanSelection, #textAndButtons #cpu-selection {
   font-size: 40px;
+  text-shadow: 2px 2px rebeccapurple;
 }
 
 .smallBtnsDiv {
@@ -282,6 +310,7 @@ body {
   font-family: font-family "Merienda", "Impact", "Georgia";
   font-weight: 590;
   color: #4c4843;
+  text-shadow: 1px 1px black;
   -webkit-box-shadow: 5px 7px 7px rgba(0, 0, 0, 0.6);
           box-shadow: 5px 7px 7px rgba(0, 0, 0, 0.6);
   border-color: rgba(248, 241, 231, 0.316);
