--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,7 @@ $primaryColorBtn: rgb(77, 77, 77);
 
 $secondaryColorBtn: rgb(47, 23, 23);
 
-$headerColor: rgb(255, 255, 255);
+$headerColor: antiquewhite;
 
 
 $smallFontFam: font-family ("Merienda", "Impact", "Georgia");
@@ -25,6 +25,26 @@ $smallTextColor: rgb(255, 218, 218);
 
 body {
     margin: 0;
+}
+
+#contactBar {
+    list-style: none;
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    text-align: right;
+    padding-top: 7px;
+    
+    li {
+        display: inline-block; 
+        margin: 0 10px;    
+    }
+
+    #liP {
+        position: relative;
+        top: -1rem;       
+        font-family: $smallFontFam;
+    }
 }
 
 .mainDiv:after{
@@ -58,7 +78,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 0em;
+    padding-top: 3em;
     color: rgb(76, 72, 67);
 }
 
@@ -93,14 +113,19 @@ body {
     justify-content: space-between;
     left: 0;
     right: 0;
+    //margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     font-size: 50px;
-    color: rgb(76, 72, 67);
+    color: antiquewhite;
+
+    h4 {
+        color: antiquewhite;
+    }
 }
 
 #cumulScoreHum, #cumulScoreCPU {
-    color: rgb(76, 72, 67);
+    text-shadow: 2px 2px rebeccapurple;
 }
 
 .buttonsDiv {
@@ -171,13 +196,14 @@ body {
     width: fit-content;
     margin-left:auto;
     margin-right: auto;
+    margin-bottom: 2rem;
     position: absolute;
     top: 28%;
     left: 0;
     right: 0;
 
     #round-result {
-        text-shadow: 2em 2em 2em 2em black;
+        text-shadow: 2px 2px rebeccapurple;
     }
 }
 
@@ -212,16 +238,19 @@ body {
         right: 0;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 2rem;
+        margin-top: 2rem;
 
         font-family: $smallFontFam;
-        color:azure;
+        color:antiquewhite;
     }
     #yrSel, #pDiv {
         font-size: 25px;
+        color: rgb(76, 72, 67);
+        font-weight: 600;
     }
     #humanSelection, #cpu-selection {
         font-size: 40px;
+        text-shadow: 2px 2px rebeccapurple;
     }
 }
 
@@ -242,7 +271,8 @@ body {
     height: 100px;
     font-family: $smallFontFam;
     font-weight: 590;
-    color: rgb(76, 72, 67);    
+    color: rgb(76, 72, 67);   
+    text-shadow: 1px 1px black; 
     
     box-shadow: 5px 7px 7px  rgba(0, 0, 0, 0.6);
     border-color: rgba(248, 241, 231, 0.316);
