--- a/scss/main3.css
+++ b/scss/main3.css
@@ -269,23 +269,44 @@ header {
   opacity: 1;
 }
 
+@-webkit-keyframes announceTEffect {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes announceTEffect {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 #resultDivBox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 25px;
   color: antiquewhite;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
   position: absolute;
-  top: 28%;
+  top: 25%;
   left: 0;
   right: 0;
 }
@@ -294,6 +315,19 @@ header {
   text-shadow: 2px 2px rebeccapurple;
 }
 
+#resultDivBox #announceScore {
+  text-align: center;
+  text-shadow: 4px 2px rebeccapurple;
+  -webkit-animation: announceTEffect 800ms ease-in-out infinite;
+          animation: announceTEffect 800ms ease-in-out infinite;
+}
+
+/*#endSeriesText {
+    width: fit-content;
+    height: 50px;
+    margin: 0 auto;
+}
+*/
 #textAndButtons {
   position: absolute;
   top: 0;
@@ -343,6 +377,7 @@ header {
   margin-left: auto;
   margin-right: auto;
   margin-top: 2rem;
+  padding-top: 4rem;
   font-family: font-family "Merienda", "Impact", "Georgia";
   color: antiquewhite;
 }
@@ -410,4 +445,4 @@ footer {
 footer p {
   margin: auto;
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main3.css.map */
