--- a/scss/main2.scss
+++ b/scss/main2.scss
@@ -61,7 +61,7 @@ body {
 }
 
 .mainDiv{
-    background-image: url("/home/tomas/repository/generalImages/image4.jpg");
+    background-image: url("../images/image4.jpg");
     background-color: black;
     padding: 0em 10em 0em 10em;
     background-position:center;
