--- a/scss/main3.css
+++ b/scss/main3.css
@@ -41,7 +41,7 @@ body {
 }
 
 .mainDiv {
-  background-image: url("../../../generalImages/image4.jpg");
+  background-image: url("../images/image4.jpg");
   background-color: black;
   padding: 0em 10em 0em 10em;
   background-position: center;
