--- a/scss/main.css
+++ b/scss/main.css
@@ -46,7 +46,7 @@ body {
   padding: 0em 10em 0em 10em;
   background-position: center;
   background-size: cover;
-  position: relative;
+  height: 100vh;
 }
 
 .mainDiv > * {
